[tool.poetry]
name = "rq-autoscaler"
version = "0.0.0"
description = "Autoscales RQ Workers based on queue size"
authors = ["Chris Pressland <mail@cpressland.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
rq-autoscaler = "rq_autoscaler:cli"

[tool.poetry.dependencies]
python = "^3.11"
rq = "^1.16.1"
kr8s = "^0.15.0"
loguru = "^0.7.2"
typer = { extras = ["all"], version = "^0.12.3" }


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
mypy = "^1.9.0"

[tool.ruff]
select = ["ALL"]
ignore = ["ANN101", "D203", "D213", "TCH002", "PLR0913"]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
